[project]
name = "llm-realtor"
version = "0.1.0"
description = ""
authors = [{ name = "juyeon960@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = ["nltk (>=3.9.1,<4.0.0)", "transformers (>=4.49.0,<5.0.0)", "sentencepiece (>=0.2.0,<0.3.0)", "spacy (>=3.8.4,<4.0.0)", "numpy (>=2.2.3,<3.0.0)", "scikit-learn (>=1.6.1,<2.0.0)", "torch (==2.2.2)", "torchtext (==0.17.2)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
