[project]
name = "llm-realtor"
version = "0.1.0"
description = ""
authors = [{ name = "juyeon960@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "nltk (>=3.9.1,<4.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "spacy (>=3.8.4,<4.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (==2.2.2)",
    "torchtext (==0.17.2)",
    "streamlit (>=1.43.2,<2.0.0)",
    "langchain-ollama (>=0.3.0,<0.4.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "langchain-core (>=0.3.47,<0.4.0)",
    "langgraph (>=0.3.18,<0.4.0)",
    "langchain-text-splitters (>=0.3.7,<0.4.0)",
    "langsmith (>=0.3.18,<0.4.0)",
    "python-decouple (>=3.8,<4.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "duckduckgo-search (>=2025.4.4,<2026.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
